force-app/main/default/objects/PublicApi_Webhook_Delivery__c/PublicApi_Webhook_Delivery__c.object-meta.xml
<CustomObject>
    <description>Tracks outbound PublicApi webhook delivery attempts for intake status updates.</description>
    <label>Public API Webhook Delivery</label>
    <nameField>
        <displayFormat>UWD-{00000000}</displayFormat>
        <label>Public API Webhook Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public API Webhook Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>