force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Created_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Created_Record_Link__c</fullName>
    <formula>IF(
    ISBLANK(Source_Record_Id__c),
    null,
    HYPERLINK(
        &apos;/&apos; &amp; Source_Record_Id__c,
        IF(
            ISBLANK(Source_Object_API_Name__c),
            Source_Record_Id__c,
            Source_Record_Id__c
        ),
        &apos;_self&apos;
    )
)</formula>
    <inlineHelpText>Opens the record created or used by this delivery.</inlineHelpText>
    <label>Created Record Link</label>
    <type>Text</type>
</CustomField>