force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAPPING_ERROR</fullName>
                <label>Mapping Error</label>
            </value>
            <value>
                <fullName>AUTH_HEADER_ERROR</fullName>
                <label>Auth/Header Error</label>
            </value>
            <value>
                <fullName>REMOTE_SITE_ERROR</fullName>
                <label>Remote Site Error</label>
            </value>
            <value>
                <fullName>WEBHOOK_RESPONSE_ERROR</fullName>
                <label>Webhook Response Error</label>
            </value>
            <value>
                <fullName>WEBHOOK_CALLOUT_ERROR</fullName>
                <label>Webhook Callout Error</label>
            </value>
            <value>
                <fullName>UNKNOWN_ERROR</fullName>
                <label>Unknown Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>