force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>PublicApi_Submission__c</referenceTo>
    <relationshipLabel>Public API Webhook Deliveries</relationshipLabel>
    <relationshipName>PublicApi_Webhook_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>