force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/PublicApi_Integration_Config__c.field-meta.xml
<CustomField>
    <fullName>PublicApi_Integration_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Public API Integration Config</label>
    <referenceTo>PublicApi_Integration_Config__c</referenceTo>
    <relationshipLabel>Public API Webhook Deliveries</relationshipLabel>
    <relationshipName>PublicApi_Webhook_Deliveries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>