force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Request_JSON__c</fullName>
    <label>Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>