force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>PublicApi_Submission__c</referenceTo>
    <relationshipLabel>Public API Submission Deliveries</relationshipLabel>
    <relationshipName>PublicApi_Submission_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>