force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Triggered_Status__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Status__c</fullName>
    <label>Triggered Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>