force-app/main/default/objects/PublicApi_Webhook_Delivery__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <label>Webhook URL</label>
    <type>Url</type>
</CustomField>